--- a/templates/produtos/produtos.html
+++ b/templates/produtos/produtos.html
@@ -21,7 +21,7 @@
 
         <tbody>
             <tr>
-                <td></td>
+                <td>{{produtos}}</td>
                 <td></td>
                 <td></td>
                 <td></td>
