--- a/templates/produtos/produtos.html
+++ b/templates/produtos/produtos.html
@@ -44,6 +44,7 @@
 </head>
 <body>
     <h1>LISTA DE PRODUTOS</h1>
+    <a href="{%url 'produto-create' %}">Adicionar Produtos</a>
     
     <table>
         <thead>
