--- a/templates/produtos/produtos.html
+++ b/templates/produtos/produtos.html
@@ -1,83 +1,44 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
+{% extends 'base.html' %}
 
-        
-        table{
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
+{% block conteudo %} 
 
-    & th, td{
-        border: 1 solid var(--fundo);
-        padding: 8px;
-        text-align: center;
-    }
+  <div class="album py-5 bg-body-tertiary">
+    <div class="container">
 
-    td{
-        text-align: center;
-    }
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-body-secondary">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 
-    & th{
-        background-color: var(--extra);
-        color: var(--ex_texto);
-    }
+<footer class="text-body-secondary py-5">
+  <div class="container">
+    <p class="float-end mb-1">
+      <a href="#">Back to top</a>
+    </p>
+    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
+    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+  </div>
+</footer>
+<script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
 
-    h1{
-        color: var(--fundo);
-        text-align: center;
-    }
-
-    *{
-            font-family: 'Times New Roman', Times, serif;
-    }
-
-
-
-        
-    </style>
-</head>
-<body>
-    <h1>LISTA DE PRODUTOS</h1>
-    <a href="{%url 'produto-create' %}">Adicionar Produtos</a>
-    
-    <table>
-        <thead>
-            <th>ID</th>
-            <th>Nome</th>
-            <th>Descricao</th>
-            <th>preço</th>
-            <th>Qtd.Estoque</th>
-            <th>Categoria</th>
-            <th>Fornecedor</th>
-        </thead>
-
-        <tbody>
-
-            {% for produto in produto %}
-
-            <tr>
-                <td>{{produto.id}}</td>
-                <td>{{produto.Nome}}</td>
-                <td>{{produto.Descricao}}</td>
-                <td>{{produto.preço}}</td>
-                <td>{{produto.Qtd.Estoque}}</td>
-                <td>{{produto.Categoria}}</td>
-                <td>{{produto.Fornecedor}}</td>
-            </tr>
-            {% endfor %}
-            <tr>
-                <td colspan="7">Nenhum produto Encotrado</td>
-            </tr>
-        </tbody>
-
-
-    </table>
-    
-</body>
+    </body>
 </html>
+
+
+ {% endblock %}
