--- a/templates/produtos/produtos_bkp.html
+++ b/templates/produtos/produtos_bkp.html
@@ -59,7 +59,7 @@
 
         <tbody>
 
-            {% for produto in produto %}
+            {% for produto in produtos %}
 
             <tr>
                 <td>{{produto.id}}</td>
