--- a/templates/produtos/produtos.html
+++ b/templates/produtos/produtos.html
@@ -1,9 +1,26 @@
 {% extends 'base.html' %}
 
-{% block conteudo %} 
+{% block conteudo %}
+<main>
+
+  <section class="py-5 text-center container">
+    <div class="row py-lg-5">
+      <div class="col-lg-6 col-md-8 mx-auto">
+        <h1 class="fw-light">Album example</h1>
+        <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+        <p>
+          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+        </p>
+      </div>
+    </div>
+  </section>
 
   <div class="album py-5 bg-body-tertiary">
     <div class="container">
+
+      <div>
+        <a href="#" class="btn btn-primary my-2">Adicionar Produtos</a>
+      </div>
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-col-lg-4 g-3">
 
@@ -32,7 +49,7 @@
                   </svg></button>
                 </div>
                 <small class="text-body-secondary"><i class="bi bi-box-seam-fill"></i>{{produto.quantidadeEstoque}}</small>
-                <small class="text-body-secondary">R$ {{produto.preco}}</small>
+                <small class="text-body-secondary"><i class="bi bi-cash"></i>R$ {{produto.preco}}</small>
               </div>
             </div>
           </div>
