--- a/templates/produtos/produtos.html
+++ b/templates/produtos/produtos.html
@@ -18,8 +18,8 @@
   <div class="album py-5 bg-body-tertiary">
     <div class="container">
 
-      <div>
-        <a href="#" class="btn btn-primary my-2">Adicionar Produtos</a>
+      <div class="py-5">
+        <a href="{% url 'produto-create' %}" class="btn btn-primary">Adicionar Produtos</a>
       </div>
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-col-lg-4 g-3">
