--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Fabio de sousa">
     <meta name="generator" content="0.122.0">
     <title>Controle de Estoque</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="link rel=" stylesheet href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">">
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
 
